helm/traefik/reverse-proxy/nas-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: truenas
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.31.99
  ports:
    - name: https
      port: 443
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: truenas
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nas.umhomelab.com`) || Host(`www.nas.umhomelab.com`)
      kind: Rule
      services:
      - name: truenas
        namespace: default
        port: 443
        scheme: https
        serversTransport: skip-ssl
  tls: {}
