helm/traefik/reverse-proxy/zigbee-controller-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: zb
  namespace: default
spec:
  ports:
    - name: http
      port: 443
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: zb
  namespace: default
subsets:
  - addresses:
      - ip: 192.168.31.77
    ports:
      - name: http
        port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: zb
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zb.umhomelab.com`) || Host(`www.zb.umhomelab.com`)
      kind: Rule
      services:
      - name: zb
        namespace: default
        port: 443
        scheme: https
        serversTransport: skip-ssl
  tls: {}
